kubernetes/kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-manager-service
  namespace: frontend-internal
spec:
  ports:
    # ports that this service should serve on
    -
      name: 'servlet-http'
      protocol: TCP
      port: 80
  selector:
    app: finance-manager-deployment
